---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 3/2/26
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 3/2/26
  Bugfixes:
    - Fixed hex rank HUD showing a scroll bar on some screens.
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 3/2/26
  Features:
    - Added the hex rank system, unlocked via the new early-game quest.
    - Added new quest: "Look at My Score".
  Minor Features:
    - Added command /disable-quest, which lets you skip a quest in the progression path.  For example, "/disable-quest biter-rammer" to avoid having to ram biters with vehicles to progress.
        Note that this also permanently makes its specific rewards unobtainable.  To skip and get the rewards, use "/complete-quest <quest>".
    - Added command /reload-item-buff-effects, for resetting all item buff effects.  Does not reset levels, only what effects are being applied.
        There should never be a need for this function going forward, but it now exists if anything goes wrong (again).
    - A different sound from "console message" can now be played when a quest gets completed, configurable in player mod settings.
  Changes:
    - Disabled the original method of ranking up items to red stars (destroy your ship outside of the solar system while carrying hextreme items).
    - Removed the mod setting for default trade quality bounds.
    - Trades now only use a single quality at a time.
    - Teleporting to a hex core adjacent to a dungeon now requires confirmation (pressing hotkey/button again to confirm).
    - Strongboxes are now removed if the "parent" hex core is deleted.
    - The passive coin buff now continually supplies coins based on the overall maximum achieved net coin rate, never going down.