@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.2
 Date: 3/2/26
+  Features:
+    - Hex core loaders can now be flipped.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.1
 Date: 3/2/26
